changes to the login screen to fix the rendering on safari, which promotes more general page optimizations

--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,30 +1,38 @@
 @import "_common";
 
-
-
 div.login {
     $card-height: 420px;
+    $card-padding-top: 50px;
     $card-width : 620px;
     $card-top: 150px;
     $image-fudge: 10px;
 
     background: $login-background;
     height: 100%;
-
-    .card {
-        border: $strong-border-canon;
-
+    
+    .errors {
+        margin-left: auto;
+        margin-right: auto;   
+    }
+    
+    .login_content {
         position: relative;
-        left: 50%;
-        transform: translateX(-50%);
+        margin-left: auto;
+        margin-right: auto; 
+        top: $card-top;  
+    }
+    
+    .card {
+        margin-left: auto;
+        margin-right: auto;
 
+        border: $strong-border-canon;
         background-color: $body-background-color;
         border-radius: 5px;
-        top: $card-top;
 
-        padding-top: 50px;
-        height: $card-height - 50px;
+        height: $card-height - $card-padding-top;
         width: $card-width;
+        padding-top: $card-padding-top;
         overflow: auto;
 
         form {
@@ -52,15 +60,14 @@ div.login {
         }
     }
 
-    footer {
-        position: absolute;
-        top: $card-height + $card-top + 10px;
-        left: 50%;
-        transform: translateX(-50%);
+    .login_footer {
+        
+        margin-left: auto;
+        margin-right: auto;
 
         width : $card-width;
-        color: $color-text1;
-        font-size : 12px;
+        color: $color-text3;
+        font-size : $small-font;
         text-align: center;
 
         .logos {
@@ -81,13 +88,9 @@ div.login {
                 span {
                     display: inline-block;
 
-                    &.version {
-                        padding-right: 4px;
-                    }
+                    &.version {}
 
-                    &.copyright {
-                        padding-left: 4px;
-                    }
+                    &.copyright {}
                 }
             }
         }
